# doctype-explorer

./: README.md  pyproject.toml
doctype_explorer/: __init__.py  explorer.py  hooks.py  modules.txt
doctype_explorer/config/: desk.py  desktop.py
doctype_explorer/doctype_explorer/page/doctype_explorer/: doctype_explorer.js  doctype_explorer.json  doctype_explorer.py
