[project]
name = "doctype_explorer"
version = "0.1.0"
readme = "README.md"
description = "Frappe DocType explorer: generate JSON/HTML docs, compare and discover"
authors = [{ name = "abdo" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
